# public/swagger.json
@@ -1047,6 +1047,31 @@
 					}
 				}
 			}
+		},
+		"/business/all": {
+			"get": {
+				"operationId": "GetBusiness",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Business"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Business"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
